# flask-img-upload

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml
templates/: success.html  upload.html
